# HTWK_SmartDriving_2015

./: AADCConfig.cmake  CMakeLists.txt  LICENSE
HTWK_SD_FILTER/: CMakeLists.txt
HTWK_SD_FILTER/AADC_DriverFilter/: CMakeLists.txt  cDriverFilter.cpp  cDriverFilter.h  displaywidget.cpp  displaywidget.h  stdafx.cpp  stdafx.h
HTWK_SD_FILTER/AADC_JuryTransmitter/: cJuryTransmitter.cpp  cJuryTransmitter.h  displaywidget.cpp  stdafx.cpp
HTWK_SD_FILTER/SD_CurveDetection/: CMakeLists.txt  CurveDetector.cpp  CurveDetector.h  SmartDrivingUtilities.h  stdafx.h
HTWK_SD_FILTER/SD_Drive_by_list/: CMakeLists.txt  Drive_by_list.cpp  Drive_by_list.h  stdafx.h
HTWK_SD_FILTER/SD_DriverFilter/: CMakeLists.txt  DriverFilter.cpp  DriverFilter.h  Maneuverlist.h  stdafx.h
HTWK_SD_FILTER/SD_Emergency_system/: CMakeLists.txt  Emergency.h  EmergencyManeuver.h  Emergency_system.cpp  Emergency_system.h  Maneuver.h  stdafx.h
HTWK_SD_FILTER/SD_FREESTYLE/: CMakeLists.txt  ManeuverList.h  aadc.h  cJuryTransmitter.cpp  cJuryTransmitter.h  displaywidget.cpp  displaywidget.h  juryEnums.h  stdafx.h
HTWK_SD_FILTER/SD_FreestyleSchnapsSaufen/: CMakeLists.txt  Client.cpp  Client.h  CrossRoadDetector.cpp  CrossRoadDetector.h  DriveAlgorithm.cpp  DriveAlgorithm.h  Freestyle.cpp  Freestyle.h  ICrossRoadDetector.h  IDriveAlgorithm.h  Lane.h  Maneuver.h  Server.cpp  Server.h  stdafx.h
HTWK_SD_FILTER/SD_FreestyleSchnapsSaufen/configuration/config/: system.config_layout  system.xml
HTWK_SD_FILTER/SD_HorizonCalibration/: AbstractHough.h  CMakeLists.txt  HorizonCalibration.cpp  HorizonCalibration.h  HorizonDetector.cpp  HorizonDetector.h  LookUpAngles.cpp  LookUpAngles.h  stdafx.h
HTWK_SD_FILTER/SD_IPM/: CMakeLists.txt  IPM.cpp  IPM.h  stdafx.h
HTWK_SD_FILTER/SD_IPM_Calibration/: CMakeLists.txt  IPM_Calibration.cpp  IPM_Calibration.h  readme.txt  stdafx.h
HTWK_SD_FILTER/SD_ImageCutter/: CMakeLists.txt  ImageCutter.cpp  ImageCutter.h  stdafx.h
HTWK_SD_FILTER/SD_LaneDetection/: AbstractHough.cpp  AbstractHough.h  CMakeLists.txt  HoughAlgorithm.cpp  HoughAlgorithm.h  HoughDefault.cpp  HoughDefault.h  HoughFast.cpp  HoughFast.h  LaneDetection.cpp  LaneDetection.h  RealLaneFinder.cpp  RealLaneFinder.h  SmartDrivingUtilities.h  stdafx.h
HTWK_SD_FILTER/SD_LightFilter/: CMakeLists.txt  LightFilter.cpp  LightFilter.h  stdafx.h
HTWK_SD_FILTER/SD_MacroPlayer/: CMakeLists.txt  Light.h  Macro_player.cpp  Macro_player.cpp.orig  Macro_player.h  Maneuver.h  std_functions.cpp  std_functions.h  stdafx.cpp  stdafx.h
HTWK_SD_FILTER/SD_MacroRecorder/: CMakeLists.txt  Macro_recorder.cpp  Macro_recorder.h
HTWK_SD_FILTER/SD_NetIO_client/: CMakeLists.txt  demoudpfilter.cpp  demoudpfilter.h  readme.txt  stdafx.h
HTWK_SD_FILTER/SD_NetIO_client/configuration/: README.txt
HTWK_SD_FILTER/SD_NetIO_client/configuration/projectReceiver/: demo_udpReceiver.prj
HTWK_SD_FILTER/SD_NetIO_client/configuration/projectReceiver/config/: system.config_layout  system.xml
HTWK_SD_FILTER/SD_NetIO_client/configuration/projectReceiver/config/system_config_files/Recording/: __kernel_scheduling.config
HTWK_SD_FILTER/SD_NetIO_client/configuration/projectSender/: demo_udpSender.prj
HTWK_SD_FILTER/SD_NetIO_client/configuration/projectSender/config/: system.config_layout  system.layout  system.xml
HTWK_SD_FILTER/SD_NetIO_client/configuration/projectSender/config/system_config_files/Recording/: __kernel_scheduling.config
HTWK_SD_FILTER/SD_ObstacleDetection/: BirdsEyeViewer.cpp  CMakeLists.txt  ConnectedComponentFinder.h  CoordinateConverter.cpp  CoordinateConverter.h  EdgeRemover.cpp  EdgeRemover.h  GroundRemover.cpp  NoiseRemover.cpp  NoiseRemover.h  ObstacleDescription.cpp  ObstacleDescription.h  ObstacleExtractor.cpp  ObstacleExtractor.h  SurfaceDescription.cpp  SurfaceDescription.h  SurfaceExtractor.cpp  SurfaceExtractor.h  Vdar.cpp  obstacledetection.cpp  obstacledetection.h  stdafx.cpp  stdafx.h
HTWK_SD_FILTER/SD_RoadSignEvaluator/: CMakeLists.txt  Maneuver.h  MarkerId.h  MarkerObject.h  RoadSignEvaluator.cpp  RoadSignEvaluator.h  ValidMarker.h  stdafx.h
HTWK_SD_FILTER/SD_SimpleDrive/: BirdsEyeViewer.h  CMakeLists.txt  ConnectedComponentFinder.cpp  CoordinateConverter.cpp  Decision.h  DecisionEvaluator.cpp  DecisionEvaluator.h  DriveAlgorithm.cpp  EmergencySystem.cpp  EmergencySystem.h  GroundRemover.cpp  GroundRemover.h  IDecisionEvaluator.h  IEmergencySystem.h  IObstacleDetection.h  IParkGap.h  NoiseRemover.cpp  PI_Regler.cpp  PI_Regler.h  ParkGap.cpp  ParkGap.h  SimpleDrive.cpp  SimpleDrive.h  SmartDrivingUtilities.h  Steer.h  Turn.h  Vdar.cpp  Vdar.h  stdafx.h
HTWK_SD_FILTER/SD_Simple_fusion/: CMakeLists.txt  Simple_fusion.cpp  Simple_fusion.h
HTWK_SD_FILTER/SD_SmartCurve/: CMakeLists.txt  IWheelRotation.h  SmartCurve.cpp  SmartCurve.h  WheelRotation.cpp  WheelRotation.h  stdafx.h
HTWK_SD_FILTER/SD_SteerAngleChecker/: CMakeLists.txt  SteerAngleChecker.cpp  SteerAngleChecker.h  stdafx.cpp
HTWK_SD_FILTER/SD_TSignal_converter/: CMakeLists.txt  TSignal_converter.cpp  TSignal_converter.h
HTWK_SD_FILTER/SD_Value_generator/: CMakeLists.txt  Value_generator.cpp  Value_generator.h  stdafx.h
HTWK_SD_FILTER/SD_VideoImageWriter/: CMakeLists.txt  VideoImageWriter.cpp  VideoImageWriter.h
HTWK_SD_FILTER/SD_World_model/: CMakeLists.txt  ObstacleLocation.h  SmartDrivingUtilities.h  World_model.cpp  World_model.h  World_object.cpp  World_object.h  old functions.txt
